[gd_scene format=3 uid="uid://bqx8k2m3n4o5p"]

[ext_resource type="Script" path="res://src/battle/action_selector.gd" id="1_script"]

[node name="action_selector" type="PanelContainer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 200.0
grow_horizontal = 0
script = ExtResource("1_script")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="unit_label" type="Label" parent="margin/vbox"]
layout_mode = 2
text = "Unit"
horizontal_alignment = 1

[node name="move_group" type="VBoxContainer" parent="margin/vbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="move_label" type="Label" parent="margin/vbox/move_group"]
layout_mode = 2
text = "Move"

[node name="buttons" type="HFlowContainer" parent="margin/vbox/move_group"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ability_group" type="VBoxContainer" parent="margin/vbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ability_label" type="Label" parent="margin/vbox/ability_group"]
layout_mode = 2
text = "Abilities"

[node name="buttons" type="HFlowContainer" parent="margin/vbox/ability_group"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="passive_group" type="VBoxContainer" parent="margin/vbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="passive_label" type="Label" parent="margin/vbox/passive_group"]
layout_mode = 2
text = "Passives"

[node name="passive_list" type="VBoxContainer" parent="margin/vbox/passive_group"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="show_all_btn" type="Button" parent="margin/vbox"]
layout_mode = 2
visible = false
text = "Show All"
